weed out unmatched Sub/End Sub statements when importing VBA fdo#46889